# stencil

./: .clang-format  .clangd  CMakeLists.txt  run.sh  run_expr.py
cmake/: AddCLI11.cmake  AddExe.cmake
include/stencil/: bmp_image.hpp  boundary_matrix.hpp  program_options.hpp  stencil.hpp  tiny_timer.hpp
src/: CMakeLists.txt  main.cpp  program_options.cpp
src/stencil/: CMakeLists.txt  bmp_image.cpp  program_options.cpp  stencil.cpp
src/stencil/slave/: CMakeLists.txt  stencil_dma.cpp  stencil_dma_slave_pack.cpp  stencil_dma_static_unroll.cpp  stencil_rma.cpp  stencil_slave.hpp
